WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200751
[WHLSL] Variables shouldn't be able to have void type
https://bugs.webkit.org/show_bug.cgi?id=200751
Summary
[WHLSL] Variables shouldn't be able to have void type
Myles C. Maxfield
Reported
2019-08-14 19:14:57 PDT
...
Attachments
Patch
(3.63 KB, patch)
2019-08-14 19:18 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2019-08-14 19:18:18 PDT
Created
attachment 376342
[details]
Patch
WebKit Commit Bot
Comment 2
2019-08-14 20:36:28 PDT
Comment on
attachment 376342
[details]
Patch Clearing flags on attachment: 376342 Committed
r248706
: <
https://trac.webkit.org/changeset/248706
>
WebKit Commit Bot
Comment 3
2019-08-14 20:36:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-08-14 20:37:15 PDT
<
rdar://problem/54332046
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug