[WHLSL] Variables shouldn't be able to have void type https://bugs.webkit.org/show_bug.cgi?id=200751

Reviewed by Robin Morisset.

Source/WebCore:

Trivial fix. Found by https://github.com/gpuweb/WHLSL/issues/320.

Test: webgpu/whlsl/void-variable-parameter.html

* Modules/webgpu/WHLSL/WHLSLChecker.cpp:
(WebCore::WHLSL::Checker::visit):

LayoutTests:

* webgpu/whlsl/void-variable-parameter-expected.txt: Added.
* webgpu/whlsl/void-variable-parameter.html: Added.


Canonical link: https://commits.webkit.org/214491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248706 268f45cc-cd09-0410-ab3c-d52691b4dbfc